--- a/SourceCode/src/Breej/components/profcard.css
+++ b/SourceCode/src/Breej/components/profcard.css
@@ -6,6 +6,7 @@
     0 24.3px 19.9px rgba(0, 0, 0, 0.172), 0 43.8px 35.4px rgba(0, 0, 0, 0.186),
     0 102px 82px rgba(0, 0, 0, 0.22);
   background-color: white;
+  border-bottom: 0.8rem solid #014180;
 }
 
 .main-container {
