--- a/SourceCode/src/Raj/components/events.css
+++ b/SourceCode/src/Raj/components/events.css
@@ -1,21 +1,20 @@
- /* .navbg{
+/* .navbg{
     background:linear-gradient(90deg,rgba(0, 242, 250, 0.685),transparent);
     background-color:rgb(3, 95, 187) /*this your primary color
   }  */
-  
 
-  .navbg{
-    background:linear-gradient(90deg,rgb(3, 95, 187),transparent);
-    background-color:#00203fff /*this your primary color*/
-  } 
+.navbg {
+  background: linear-gradient(90deg, rgb(3, 95, 187), transparent);
+  background-color: #00203fff; /*this your primary color*/
+}
 
-  .eventHistbg{
-    background:linear-gradient(90deg,rgb(3, 95, 187),transparent);
-    background-color:#00203fff /*this your primary color*/
-  } 
+.eventHistbg {
+  background: linear-gradient(90deg, rgb(3, 95, 187), transparent);
+  background-color: #00203fff; /*this your primary color*/
+}
 
-.border{
-    border-style: inset;
+.border {
+  border-style: inset;
 }
 
 /* .calenderpicker{
@@ -33,36 +32,35 @@
 } */
 
 .loginLabel {
-    display:block;
-    width:26%;
-    text-align:right;
+  display: block;
+  width: 26%;
+  text-align: right;
 }
 
-
 html {
-    height: 100%;
-  }
+  height: 100%;
+}
 body {
-    min-height: 100%;
-    background: #f0f2f5;
-  }
+  min-height: 100%;
+  background: #f0f2f5;
+}
 /* .form-control{
   background-color: #e4e6eb !important;
 } */
- 
-.fstyle{
+
+.fstyle {
   font-style: italic;
 }
 
-.invalidValuebStyle{
-    border-color: #dc3545 !important;
-    padding-right: calc(1.5em + 0.75rem) !important;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e") !important;
-    background-repeat: no-repeat !important;
-    background-position: right calc(0.375em + 0.1875rem) center !important;
-    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !important;
+.invalidValuebStyle {
+  border-color: #dc3545 !important;
+  padding-right: calc(1.5em + 0.75rem) !important;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e") !important;
+  background-repeat: no-repeat !important;
+  background-position: right calc(0.375em + 0.1875rem) center !important;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !important;
 }
 
-.validValuebStyle{
-  border:1px solid #ced4da
+.validValuebStyle {
+  border: 1px solid #ced4da;
 }
