--- a/SourceCode/src/Raj/components/events.css
+++ b/SourceCode/src/Raj/components/events.css
@@ -85,7 +85,7 @@ div.screenmask
     left: 0;
     z-index: 50;
     background-color: #606060;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+    /* filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50); */
     -moz-opacity: .5;
     opacity: .5;
 }
