--- a/SourceCode/src/Breej/components/EditProfile.css
+++ b/SourceCode/src/Breej/components/EditProfile.css
@@ -95,3 +95,28 @@
 .content {
   padding-bottom: 3rem;
 }
+
+.profile-img {
+  text-align: center;
+}
+.profile-img img {
+  width: 70%;
+  height: 100%;
+}
+
+.profile-img .file {
+  position: relative;
+  overflow: hidden;
+  margin-top: -20%;
+  /* width: 50%; */
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  background: #212529b8;
+}
+.profile-img .file input {
+  position: absolute;
+  opacity: 0;
+  right: 0;
+  top: 0;
+}
