--- a/SourceCode/src/Breej/components/profcard.css
+++ b/SourceCode/src/Breej/components/profcard.css
@@ -40,9 +40,15 @@
 .cancel {
   background-color: #d80059;
 }
+
 .verify-id {
   background-color: #ffa1a1;
-  margin-top: 5rem;
+  margin-top: 4rem;
+}
+
+.verify-id1 {
+  background-color: #ffc107;
+  margin-top: 4rem;
 }
 
 .myButton {
@@ -62,10 +68,12 @@
   justify-content: center;
   width: 8rem;
 }
+
 .myButton:hover {
   background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
   background-color: #e9e9e9;
 }
+
 .myButton:active {
   position: relative;
   top: 1px;
